Build: fix spacing [mvp]

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -522,10 +522,10 @@ video {
 .text-secondary {
   color: #c05621 !important; }
 
-.mr-12 {
-  margin-right: 3rem; }
-
 @media (min-width: 768px) {
+  .md-w-20 {
+    width: 20% !important; }
+
   .md-w-30 {
     width: 30% !important; }
 
@@ -539,7 +539,22 @@ video {
     width: 60% !important; }
 
   .md-w-70 {
-    width: 70% !important; } }
+    width: 70% !important; }
+
+  .md-w-80 {
+    width: 80% !important; }
+
+  .md-mr-12 {
+    margin-right: 3rem; }
+
+  .md-mr-16 {
+    margin-right: 4rem; }
+
+  .md-mr-20 {
+    margin-right: 5rem; }
+
+  .md-pr-8 {
+    padding-right: 2rem; } }
 .divider {
   margin: 0 auto; }
 
@@ -559,7 +574,7 @@ html {
   margin: 0 auto;
   padding-left: 1rem;
   padding-right: 1rem;
-  /* height: 100vh  ?? */ }
+  max-width: 1350px; }
 
 @media (min-width: 640px) {
   .container {
@@ -788,7 +803,7 @@ html {
     padding-bottom: 4rem; }
 
   .mkt-block h3 {
-    font-size: 3rem; }
+    font-size: 2.25rem; }
 
   .mkt-feature-list {
     padding-top: 3rem;
@@ -859,7 +874,7 @@ section:first-child {
     display: block; }
 
   .section-block h3 {
-    font-size: 3rem; } }
+    font-size: 2.25rem; } }
 @media (min-width: 1024px) {
   section {
     padding-top: 2.5rem;
