--- a/src/scss/components/_marketing.scss
+++ b/src/scss/components/_marketing.scss
@@ -81,7 +81,7 @@
   }
 
   .mkt-block h3 {
-    font-size: $text-5xl;
+    font-size: $text-4xl;
   }
 
   .mkt-feature-list {
