--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -34,93 +34,6 @@ section:first-child {
   color: $text-base;
 }
 
-// .content-body section {
-//   padding-top: $sz-6;
-//   padding-bottom: $sz-6;
-// }
-
-// .content-body section:first-child {
-//   padding-top: 0;
-// }
-
-// .section-head {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-// }
-
-// .section-row h3,
-// .section-head h3 {
-//   font-size: $text-3xl;
-//   font-weight: $text-bold;
-//   line-height: $leading-tight;
-//   color: $text-primary;
-// }
-
-// .section-body,
-// .section-row p {
-//   margin-top: $sz-6;
-//   color: $text-base;
-// }
-
-// .section-body ul li {
-//   display: flex;
-//   align-items: flex-start;
-//   margin-top: $sz-4;
-// }
-
-// .section-body ul li svg {
-//   height: $sz-6;
-//   width: $sz-6;
-//   color: $text-primary;
-// }
-
-// .section-body ul li p {
-//   margin-left: $sz-3;
-//   color: $text-base;
-//   line-height: $leading-normal;
-// }
-
-// .section-image {
-//   display: none;
-// }
-
-// .box-cta {
-//   margin-top: $sz-10;
-// }
-
-// .box-btn {
-//   display: block;
-//   font-size:  $sz-4;
-//   font-weight: $text-semibold;
-//   border-radius: $rounded-lg;
-//   color: $white;
-//   background-color: $bg-secondary;
-//   padding: $sz-3 $sz-4;
-//   width: 100%;
-//   line-height: $leading-normal;
-//   text-align: center;
-//   transition-duration: 0.15s;
-//   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-//   transition-property: background-color, border-color, color, fill, stroke,
-//     opacity, box-shadow, transform;
-// }
-
-// .box-btn:focus {
-//   outline: 0;
-// }
-
-// .box-btn:hover {
-//   background-color: $bg-secondary-lite;
-// }
-
-@media (min-width: $breakpoint-sm) {
-//   .content-body {
-//     padding-left: $sz-4;
-//     padding-right: $sz-4;
-//   }
-}
-
 @media (min-width: $breakpoint-md) {
   .section {
     padding-top: $sz-16;
@@ -134,7 +47,6 @@ section:first-child {
 
   .section-flex {
     flex-direction: row;
-    // justify-content: flex-start;
     justify-content: center;
     align-items: center;
   }
@@ -144,34 +56,8 @@ section:first-child {
   }
 
   .section-block h3 {
-    font-size: $text-5xl;
+    font-size: $text-4xl;
   }
-//   .content {
-//     margin-top: $sz-4;
-//   }
-
-//   .content-body section {
-//     display: flex;
-//   }
-
-//   .pl-8 {
-//     padding-left: 2rem;
-//   }
-
-//   .section-image {
-//     display: block;
-//     width: 75%;
-//   }
-
-//   .section-head,
-//   .section-body {
-//     width: 50%;
-//   }
-
-//   .section-body {
-//     margin: 0 auto;
-//     padding: 2rem;
-//   }
 }
 
 @media (min-width: $breakpoint-lg) {
@@ -179,14 +65,6 @@ section:first-child {
     padding-top: $sz-10;
     padding-bottom: $sz-10;
   }
-  // .content {
-  //   margin-top: $sz-12;
-  // }
-
-  // .content-body section {
-  //   padding-top: $sz-10;
-  //   padding-bottom: $sz-10;
-  // }
 }
 
 @media (min-width: $breakpoint-xl) {
