--- a/src/scss/components/_utils.scss
+++ b/src/scss/components/_utils.scss
@@ -2,15 +2,20 @@
   color: $text-secondary !important;
 }
 
-.mr-12 {
-  margin-right: $sz-12;
-}
 
 @media (min-width: $breakpoint-md) {
+  .md-w-20 { width: 20% !important; }
   .md-w-30 { width: 30% !important; }
   .md-w-40 { width: 40% !important; }
   .md-w-50 { width: 50% !important; }
   .md-w-60 { width: 60% !important; }
   .md-w-70 { width: 70% !important; }
+  .md-w-80 { width: 80% !important; }
+
+  .md-mr-12 { margin-right: $sz-12; }
+  .md-mr-16 { margin-right: $sz-16; }
+  .md-mr-20 { margin-right: $sz-20; }
+
+  .md-pr-8 { padding-right: $sz-8; }
 }
 
